
[gd_scene load_steps=8 format=3 uid="uid://c0d47vd87vlmt"]

[ext_resource type="Script" uid="uid://b4vx32mrylism" path="res://scripts/hud.gd" id="1_hqnrr"]
[ext_resource type="Texture2D" uid="uid://cuyaqmy0d44ys" path="res://assets/sprites/ui/bottom_panel.png" id="2_bo48s"]
[ext_resource type="Texture2D" uid="uid://cthdmaxtlbvn3" path="res://assets/ui/basic-modal.png" id="3_8qguk"]
[ext_resource type="PackedScene" uid="uid://cu6uv6d63rbjb" path="res://scenes/ui/unit_slot_group.tscn" id="4_8qguk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qguk"]
texture = ExtResource("3_8qguk")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0
modulate_color = Color(1, 1, 1, 0.7529412)

[ext_resource type="Texture2D" uid="uid://o52prcn311li" path="res://assets/sprites/ui/button_54x28.png" id="4_oj5la"]
[ext_resource type="Texture2D" uid="uid://uqid8xo3wv80" path="res://assets/sprites/ui/button_54x30.png" id="5_gss2c"]
[ext_resource type="Texture2D" uid="uid://o2xmcjwjs5x2" path="res://assets/sprites/ui/button_54x29.png" id="6_h022r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0mwgc"]

[node name="HUD" type="Control" node_paths=PackedStringArray("phase_label", "tray_panel", "unit_tray", "battle_end_modal", "battle_end_label", "battle_end_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hqnrr")
phase_label = NodePath("PanelContainer/PhaseLabel")
tray_panel = NodePath("")
unit_tray = NodePath("TrayPanel/Control/UnitSlotGroup")

battle_end_modal = NodePath("BattleEndModal")
battle_end_label = NodePath("BattleEndModal/Panel/PanelContainer/VBoxContainer/BattleEndLabel")
battle_end_button = NodePath("BattleEndModal/Panel/PanelContainer/VBoxContainer/ConfirmButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.5
offset_top = 16.0
offset_right = 88.5
offset_bottom = 39.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8qguk")

[node name="PhaseLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Level 1 -- Preparation Phase"
horizontal_alignment = 1

[node name="TrayPanel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -90.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="TrayPanel"]
layout_mode = 2
texture = ExtResource("2_bo48s")

[node name="Control" type="Control" parent="TrayPanel"]
layout_mode = 2

[node name="UnitSlotGroup" parent="TrayPanel/Control" instance=ExtResource("4_8qguk")]
layout_mode = 0
offset_left = 43.0
offset_top = 9.0
offset_right = 219.0
offset_bottom = 77.0
enable_drag_drop = true
selection_mode = 2

[node name="UnitTray" type="GridContainer" parent="TrayPanel/Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 90.0
columns = 5

[node name="GoButton" type="TextureButton" parent="TrayPanel"]
layout_mode = 0
offset_left = 262.0
offset_top = 31.0
offset_right = 313.0
offset_bottom = 62.0
texture_normal = ExtResource("4_oj5la")
texture_pressed = ExtResource("5_gss2c")
texture_hover = ExtResource("6_h022r")

[node name="Gold" type="Label" parent="TrayPanel/Control"]
layout_mode = 0
offset_left = 578.0
offset_top = 33.0
offset_right = 619.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.42352942, 0.11372549, 0.105882354, 1)
text = "Gold: 10"

[node name="BattleEndModal" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2509804)

[node name="Panel" type="Panel" parent="BattleEndModal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="BattleEndModal/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0mwgc")

[node name="VBoxContainer" type="VBoxContainer" parent="BattleEndModal/Panel/PanelContainer"]
layout_mode = 2

[node name="BattleEndLabel" type="Label" parent="BattleEndModal/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Example text"

[node name="ConfirmButton" type="Button" parent="BattleEndModal/Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"
